--- a/index.html
+++ b/index.html
@@ -3,8 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="manifest" href="manifest.json" />
-    <meta name="theme-color" content="#007bff" />
     <title>Chemical Supplies Table</title>
     <link
       rel="stylesheet"
@@ -56,9 +54,9 @@
             <th scope="row"><i class="bi bi-check-circle"></i></th>
             <th id="sort-chemical">Chemical Name</th>
             <th id="sort-vendor">Vendor</th>
-            <th id="sort-density">Density</th>
             <th id="sort-density">Density <small>(g/m³)</small></th>
             <th id="sort-viscosity">Viscosity <small>(m²/s)</small></th>
+            <th id="sort-packaging">Packaging</th>
             <th id="sort-packsize">Pack size</th>
             <th id="sort-unit">Unit</th>
             <th id="sort-quantity">Quantity</th>
@@ -73,20 +71,5 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="script.js"></script>
-    <script>
-      if ("serviceWorker" in navigator) {
-        navigator.serviceWorker
-          .register("/service-worker.js")
-          .then(function (registration) {
-            console.log(
-              "Service Worker registered with scope:",
-              registration.scope
-            );
-          })
-          .catch(function (error) {
-            console.log("Service Worker registration failed:", error);
-          });
-      }
-    </script>
   </body>
 </html>
