--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <table class="table table-hover table-bordered" id="chemicalTable">
         <thead>
           <tr>
-            <th scope="row"><i class="bi bi-check-circle"></i></th>
+            <th scope="row"><i class="bi bi-check"></i></th>
             <th id="sort-chemical">Chemical Name</th>
             <th id="sort-vendor">Vendor</th>
             <th id="sort-density">Density <small>(g/m³)</small></th>
